Bug 761 - Undocumented options, part 1
: Undocumented options, part 1
Status: RESOLVED FIXED
Product: gcc
Classification: Unclassified
Component: c
: 2.97
: P3 normal
: ---
Assigned To: Not yet assigned to anyone
:
:
:
:
  Show dependency treegraph
 
Reported: 2000-11-09 14:26 UTC by Joseph S. Myers
Modified: 2005-01-03 16:55 UTC (History)
6 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph S. Myers 2000-11-09 14:26:00 UTC
There are many command line options that have managed to get into GCC
without documentation in the Texinfo manual.  These include the
following; this list covers only the driver, back-end
architecture-independent options, and the C compiler.  Even if some
are only intended for internal or debugging use (or placeholders for
future use) they should still be documented: many such options already
are.

-dumpspecs
-dumpversion
-dumpmachine
-print-multi-lib
-print-multi-directory
-aux-info
-fsched-verbose
-feliminate-dwarf2-dups
-fsched-interblock
-fsched-spec
-fsched-spec-load
-fsched-spec-load-dangerous
-fbranch-count-reg
-fnew-exceptions
-fsjlj-exceptions
-fasynchronous-exceptions
-freorder-blocks
-fpeephole2
-fbounded-pointers
-fbounds-check
-ftime-report
-fmem-report
-fpreprocessed
-Wmissing-braces

Release:
2.97 20001108 (experimental)

Environment:
System: Linux decomino 2.2.17 #1 Mon Sep 4 20:22:16 UTC 2000 i686 unknown
Architecture: i686

	
host: i686-pc-linux-gnu
build: i686-pc-linux-gnu
target: i686-pc-linux-gnu

How-To-Repeat:
Observe such an option in the source or a Makefile or --help output;
try and fail to find any explanation in the manual of exactly what it
does.
Comment 1 Joseph S. Myers 2000-11-09 14:26:00 UTC
Fix:
Add documentation for all the above options to the manual.  Don't add
new options without being sure to add documentation at the same time.
Comment 2 Joseph S. Myers 2001-05-20 16:42:15 UTC
State-Changed-From-To: open->analyzed
State-Changed-Why: Confirming my own PR.
    
    Some of these options have since been documented.  The
    following haven't:
    
    -print-multi-lib
    -print-multi-directory
    -aux-info
    -fsched-verbose
    -feliminate-dwarf2-dups
    -fsched-interblock
    -fsched-spec
    -fsched-spec-load
    -fsched-spec-load-dangerous
    -fbranch-count-reg
    -fnon-call-exceptions
    -freorder-blocks
    -fpeephole2
    -fbounded-pointers
    -fbounds-check
    -fpreprocessed
Comment 3 Joseph S. Myers 2001-05-20 23:42:15 UTC
From: jsm28@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org, jsm28@cam.ac.uk, nobody@gcc.gnu.org
Cc:  
Subject: Re: c/761
Date: 20 May 2001 23:42:15 -0000

 Synopsis: Undocumented options, part 1
 
 State-Changed-From-To: open->analyzed
 State-Changed-By: jsm28
 State-Changed-When: Sun May 20 16:42:15 2001
 State-Changed-Why:
     Confirming my own PR.
     
     Some of these options have since been documented.  The
     following haven't:
     
     -print-multi-lib
     -print-multi-directory
     -aux-info
     -fsched-verbose
     -feliminate-dwarf2-dups
     -fsched-interblock
     -fsched-spec
     -fsched-spec-load
     -fsched-spec-load-dangerous
     -fbranch-count-reg
     -fnon-call-exceptions
     -freorder-blocks
     -fpeephole2
     -fbounded-pointers
     -fbounds-check
     -fpreprocessed
 
 http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&pr=761&database=gcc
Comment 4 Alexandre Oliva 2001-06-10 18:22:50 UTC
Responsible-Changed-From-To: unassigned->aoliva
Responsible-Changed-Why: Documented -print-multi-directory, -print-multi-lib and -aux-info
Comment 5 Alexandre Oliva 2001-06-10 18:23:18 UTC
Responsible-Changed-From-To: aoliva->unassigned
Responsible-Changed-Why: That's all for now.
Comment 6 Neil Booth 2002-03-25 01:00:29 UTC
State-Changed-From-To: analyzed->feedback
State-Changed-Why: Joseph,  could you update the list of still undocumented options?  Many of those here have been documented.  Probably
    best to open in a new PR, as this PR is getting long and twisty.
Comment 7 Joseph S. Myers 2002-03-25 10:24:01 UTC
From: "Joseph S. Myers" <jsm28@cam.ac.uk>
To: <neil@gcc.gnu.org>, Joseph Myers <jsm28@cam.ac.uk>, 
     <gcc-gnats@gcc.gnu.org>
Cc:  
Subject: Re: c/761: Undocumented options, part 1
Date: Mon, 25 Mar 2002 10:24:01 +0000 (GMT)

 On 25 Mar 2002 neil@gcc.gnu.org wrote:
 
 > Synopsis: Undocumented options, part 1
 > 
 > State-Changed-From-To: analyzed->feedback
 > State-Changed-By: neil
 > State-Changed-When: Mon Mar 25 01:00:29 2002
 > State-Changed-Why:
 >     Joseph, could you update the list of still undocumented options?  
 >     Many of those here have been documented.  Probably
 >     best to open in a new PR, as this PR is getting long and twisty.
 
 I'll produce a new list at some point, if someone else doesn't do so
 first, but probably not for some months.
 
 -- 
 Joseph S. Myers
 jsm28@cam.ac.uk
 
Comment 8 Joseph S. Myers 2002-08-17 16:21:01 UTC
State-Changed-From-To: feedback->analyzed
State-Changed-Why: The following is a current list of undocumented options:
    
    --version
    -feliminate-dwarf2-dups
    -fsched-interblock
    -fsched-spec
    -fsched-spec-load
    -fsched-spec-load-dangerous
    -fbranch-count-reg
    -funsafe-profile-arcs
    -fbounded-pointers
    -fbounds-check
    -fsched-verbose
Comment 9 Nathanael C. Nerode 2002-10-20 13:28:17 UTC
State-Changed-From-To: analyzed->closed
State-Changed-Why: Everything mentioned previously appears to be documented or removed.  If new undocumented options are discovered or created, open a new bug.
Comment 10 Roger Sayle 2002-10-20 19:18:30 UTC
From: sayle@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: c/761
Date: 20 Oct 2002 19:18:30 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	sayle@gcc.gnu.org	2002-10-20 12:18:30
 
 Modified files:
 	gcc            : ChangeLog toplev.c flags.h c-opts.c 
 	gcc/doc        : invoke.texi 
 
 Log message:
 	PR c/761
 	* toplev.c (flag_unsafe_profile_arcs): Remove.
 	(flag_bounded_pointers): Remove.
 	(flag_bounds_check): Correct comments.
 	(lang_independent_options): Remove -funsafe-profile-arcs and
 	-fbounded-pointers.  Correct -fbounds-check comments.
 	
 	* flags.h: Correct flag_schedule_interblock comments.
 	(flag_bounded_pointers): Remove prototype.
 	(flag_bounds_check): Correct comments.
 	
 	* c-opts.c (c_common_init_options): No need to mark
 	flag_bounds_check as unspecified.
 	(c_common_post_options): And no need to set it from
 	flag_bounded_pointers if its still unspecified.
 	
 	* doc/invoke.texi: Fix some overfull hboxes in "make dvi".
 	Document --version, -feliminate-dwarf-2-dups, -fno-sched-interblock,
 	-fno-sched-spec, -fsched-spec-load, -fsched-spec-load-dangerous,
 	-fsched-verbose=n, -fno-branch-count-reg and -fbounds-check.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=1.15733&r2=1.15734
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/toplev.c.diff?cvsroot=gcc&r1=1.682&r2=1.683
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/flags.h.diff?cvsroot=gcc&r1=1.92&r2=1.93
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/c-opts.c.diff?cvsroot=gcc&r1=1.21&r2=1.22
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/doc/invoke.texi.diff?cvsroot=gcc&r1=1.195&r2=1.196
 
Comment 11 Roger Sayle 2002-10-23 13:38:29 UTC
From: sayle@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: c/761
Date: 23 Oct 2002 13:38:29 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Branch: 	gcc-3_2-branch
 Changes by:	sayle@gcc.gnu.org	2002-10-23 06:38:29
 
 Modified files:
 	gcc            : ChangeLog 
 	gcc/doc        : invoke.texi 
 
 Log message:
 	PR c/761
 	* doc/invoke.texi: Fix some overfull hboxes in "make dvi".
 	Document --version, -fno-sched-interblock, -fno-sched-spec,
 	-fsched-spec-load, -fsched-spec-load-dangerous,
 	-fsched-verbose=n, -fno-branch-count-reg and -fbounds-check.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_2-branch&r1=1.13152.2.657.2.101&r2=1.13152.2.657.2.102
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/doc/invoke.texi.diff?cvsroot=gcc&only_with_tag=gcc-3_2-branch&r1=1.119.2.12.4.6&r2=1.119.2.12.4.7